--- a/front/admin/src/components/order_table/order_table.css
+++ b/front/admin/src/components/order_table/order_table.css
@@ -32,3 +32,11 @@
     padding: 0.1rem 1rem;
     text-align: left;
 }
+
+.button_container {
+    display: flex;
+    padding: 1rem;
+    border: none;
+    align-items: center;    
+
+}
